--- a/oproxy/package.json
+++ b/oproxy/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx index.ts"
+    "start": "echo todo implement",
+    "dev": "tsx src/index.ts",
+    "build": "tsc"
   },
-  "author": "Andrew, Leon, Anthony",
+  "author": "PBR @ UCLA",
   "license": "MIT",
   "description": "",
   "packageManager": "pnpm@8.15.4+sha1.c85a4305534f76d461407b59277b954bac97b5c4",
