--- a/oproxy/package.json
+++ b/oproxy/package.json
@@ -7,13 +7,15 @@
     "start": "echo todo implement",
     "dev": "tsx src/index.ts",
     "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "fmt": "prettier --cache --write ."
   },
   "author": "PBR @ UCLA",
   "license": "MIT",
   "description": "",
   "packageManager": "pnpm@8.15.4+sha1.c85a4305534f76d461407b59277b954bac97b5c4",
-  "dependencies": {
+  "devDependencies": {
+    "prettier": "^2.8.8",
     "@types/node": "^20.14.10",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
