fix tsconfig js file types

--- a/oproxy/tsconfig.json
+++ b/oproxy/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["es2023", "ES2021.WeakRef"],
     "types": ["node"],
     "target": "es2023",
-    "module": "commonjs",
+    "module": "node16",
     "strict": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
@@ -12,6 +12,7 @@
     "incremental": true,
     "resolveJsonModule": true,
     "isolatedModules": false,
+    "esModuleInterop": true,
     // "allowImportingTsExtensions": true,
     "importHelpers": true,
     "downlevelIteration": false,
