--- a/oproxy/package.json
+++ b/oproxy/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obuherseys-proxy",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "start": "echo todo implement",
