Upgrade to Node 22, parse source code and try to modify imports on load Co-authored-by: Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>

--- a/oproxy/tsconfig.json
+++ b/oproxy/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["es2023", "ES2021.WeakRef"],
+    "lib": ["ESNext", "ES2021.WeakRef"],
     "types": ["node"],
-    "target": "es2023",
-    "module": "node16",
+    "target": "esnext",
+    "module": "NodeNext",
     "strict": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
