--- a/oproxy/package.json
+++ b/oproxy/package.json
@@ -1,21 +1,20 @@
 {
   "name": "obuherseys-proxy",
   "version": "1.0.0",
-  "main": "dist/dist/index.js",
+  "author": "PBR @ UCLA",
+  "license": "MIT",
+  "description": "",
+  "type": "module",
   "scripts": {
-    "start": "echo todo implement",
+    "start": "node --import ./dist/index.js ./dist/playground2.js",
     "dev": "tsx src/index.ts",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "fmt": "prettier --cache --write ."
   },
-  "author": "PBR @ UCLA",
-  "license": "MIT",
-  "description": "",
-  "packageManager": "pnpm@8.15.4+sha1.c85a4305534f76d461407b59277b954bac97b5c4",
   "devDependencies": {
-    "prettier": "^2.8.8",
     "@types/node": "^20.14.10",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "tsx": "^4.16.2",
@@ -23,5 +22,11 @@
   },
   "files": [
     "./dist/*"
-  ]
+  ],
+  "packageManager": "pnpm@8.15.4+sha1.c85a4305534f76d461407b59277b954bac97b5c4",
+  "dependencies": {
+    "acorn": "^8.12.1",
+    "acorn-walk": "^8.3.3",
+    "astring": "^1.8.6"
+  }
 }
