--- a/dataset/interprocedural3/truepositive/brokenhash/meta.yml
+++ b/dataset/interprocedural3/truepositive/brokenhash/meta.yml
@@ -1,3 +1,5 @@
 - filename: BrokenHash1.js
   description: uses md5 and function indirection to hash data
   secure: no
+- filename: CorrectedHash.js
+  secure: yes
