Fixed tsconfig to handle proxy modules as CJS, update to also log function calls made by created cipher/decipher objs
Co-authored-by: Andrew <Arc-blroth@users.noreply.github.com>

--- a/oproxy/package.json
+++ b/oproxy/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "node --import ./dist/index.js ./dist/playground2.js",
+    "start": "node --import ./dist/index.js ./dist/playgroundLoggerTest.js",
     "build": "tsc --build",
     "build:watch": "tsc --build --watch",
     "fmt": "prettier --cache --write ."
