Make logging more generic, log valid JSON
Co-authored-by: Andrew <Arc-blroth@users.noreply.github.com>

--- a/oproxy/tsconfig.json
+++ b/oproxy/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "files": [],
-  "references": [
-    {"path": "./tsconfig.main.json"},
-    {"path": "./tsconfig.proxymodules.json"}
-  ]
+  "references": [{ "path": "./tsconfig.main.json" }, { "path": "./tsconfig.proxymodules.json" }]
 }
