Add Log Parser, cleanup some files
Co-authored-by: Andrew <Arc-blroth@users.noreply.github.com>

--- a/oproxy/package.json
+++ b/oproxy/package.json
@@ -6,8 +6,9 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "node --enable-source-maps --import ./dist/index.js ./dist/playgroundLoggerTest.js",
-    "build": "tsc --build",
+    "start": "node --enable-source-maps --import ./dist/index.js ./dist/tests/playgroundLoggerTest.js",
+    "processLog": "node ./dist/log/index.js -c ./src/tests/checks.json",
+    "build": "tsc --build --force",
     "build:watch": "tsc --build --watch",
     "fmt": "prettier --cache --write ."
   },
@@ -23,6 +24,7 @@
   "dependencies": {
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3",
+    "commander": "^12.1.0",
     "estree-util-attach-comments": "^3.0.0",
     "estree-util-to-js": "^2.0.0",
     "source-map": "^0.7.4"
