--- a/dataset/mixedsensitivities/contextfield/truepositive/staticiv/meta.yml
+++ b/dataset/mixedsensitivities/contextfield/truepositive/staticiv/meta.yml
@@ -1,4 +1,4 @@
 
-- filename: Staticlv1.js
+- filename: StaticIv1.js
   description: Two initialization vectors are intiialized, one statially insecure (iv1) and one randomly secure (iv2). The static, insecure iv is then used to create the cipher.
   secure: no
