--- a/oproxy/tsconfig.main.json
+++ b/oproxy/tsconfig.main.json
@@ -16,7 +16,8 @@
     "importHelpers": true,
     "downlevelIteration": false,
     "rootDir": "src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "allowJs": true
   },
   "include": ["src/*.ts", "src/**/*.ts"],
   "exclude": ["src/proxymodules/*.ts", "src/proxymodules/**/*.ts"]
