--- a/ofunc/package.json
+++ b/ofunc/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "obuherseys-proxy",
+  "name": "obuherseys-func",
   "version": "1.0.0",
-  "main": "dist/dist/index.js",
+  "author": "PBR @ UCLA",
+  "license": "MIT",
+  "description": "",
   "scripts": {
-    "start": "echo todo implement",
-    "dev": "tsx src/index.ts",
+    "dev": "node --experimental-loader ./dist/index.js ./dist/playground.js",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "fmt": "prettier --cache --write ."
   },
-  "author": "PBR @ UCLA",
-  "license": "MIT",
-  "description": "",
+  "dependencies": {
+    "node": "^18.20.4"
+  },
   "packageManager": "pnpm@8.15.4+sha1.c85a4305534f76d461407b59277b954bac97b5c4",
   "devDependencies": {
     "@types/node": "^20.14.10",
@@ -23,8 +24,5 @@
   },
   "files": [
     "./dist/*"
-  ],
-  "dependencies": {
-    "node": "^18.20.4"
-  }
+  ]
 }
