--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
   "semi": true,
   "trailingComma": "es5",
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": false,
+  "printWidth": 120
 }
