--- a/oproxy/package.json
+++ b/oproxy/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "obuherseys-proxy",
+  "name": "obuhersys-proxy",
   "version": "1.0.0",
   "author": "PBR @ UCLA",
   "license": "MIT",
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "node --enable-source-maps --import ./dist/index.js ./dist/tests/playgroundLoggerTest.js",
+    "dev": "node --enable-source-maps --import ./dist/index.js ./dist/tests/playgroundLoggerTest.js",
     "processLog": "node ./dist/log/index.js -c ./src/tests/checks.js",
     "build": "tsc --build --force",
     "build:watch": "tsc --build --watch",
     "fmt": "prettier --cache --write ."
+  },
+  "dependencies": {
+    "acorn": "^8.12.1",
+    "acorn-walk": "^8.3.3",
+    "commander": "^12.1.0",
+    "estree-util-attach-comments": "^3.0.0",
+    "estree-util-to-js": "^2.0.0",
+    "source-map": "^0.7.4"
   },
   "devDependencies": {
     "@types/estree": "^1.0.5",
@@ -20,14 +28,6 @@
     "tslib": "^2.6.3",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
-  },
-  "dependencies": {
-    "acorn": "^8.12.1",
-    "acorn-walk": "^8.3.3",
-    "commander": "^12.1.0",
-    "estree-util-attach-comments": "^3.0.0",
-    "estree-util-to-js": "^2.0.0",
-    "source-map": "^0.7.4"
   },
   "files": [
     "./dist/*"
